--- a/style/style_responsive.css
+++ b/style/style_responsive.css
@@ -26,9 +26,19 @@ a {
     transition: color 200ms;
 }
 
+img:hover {
+    transform: scale(140%);
+}
 
-a:hover {
+.text_focused:hover {
     color: rgba(3, 55, 104, 1);
+    text-decoration: underline;
+}
+
+.footer_special_text_color:hover {
+    text-decoration: underline;
+    color:  rgba(237, 240, 245, 1);
+    
 }
 
 #padre {
@@ -62,6 +72,7 @@ a:hover {
     color: rgba(237, 240, 245, 1);
     border-color: rgba(6, 2, 29, 1); 
 }
+
 
 
 #gallery_modulo_img {
@@ -154,6 +165,7 @@ a:hover {
         color: rgba(6, 2, 29, 1); 
         font-family: 'Ubuntu', sans-serif; 
         font-weight:500;
+        text-decoration: none;
     }
     .text_regular {
         font-size: 16px; 
@@ -205,6 +217,7 @@ a:hover {
         color: rgba(237, 240, 245, 1); 
         font-family: 'Ubuntu', sans-serif; 
         font-weight: 400; 
+        text-decoration: none;        
     }
     /* Home */
     .div_home_main {
@@ -447,6 +460,7 @@ a:hover {
         color: rgba(6, 2, 29, 1); 
         font-family: 'Ubuntu', sans-serif; 
         font-weight:500;
+        text-decoration: none;
     }
     .text_regular {
         font-size: 16px; 
@@ -706,6 +720,8 @@ a:hover {
         color: rgba(237, 240, 245, 1); 
         font-family: 'Ubuntu', sans-serif; 
         font-weight: 400; 
+        text-decoration: none;
+        padding: 8px;
     }
 
 
