--- a/scss/_about_me.scss
+++ b/scss/_about_me.scss
@@ -1,19 +1,34 @@
 
 
 @media only screen and (max-width: 600px) {
-    #padre_about_me {
+
         
-        margin-top: 60px;
-        margin-bottom: 60px;
-        display: flex;
-        justify-content: center;
-        
-        }
-        .padre_about_me2 {
-        justify-content: center;
-        width: 300px;    
-        flex-direction: column;
-        }
+
+        main {
+            div{
+                div{              
+                    div{
+                        font-size: 24px;
+                        color: rgba(8, 38, 66, 1);
+                        font-family: 'Ubuntu', sans-serif;
+                        font-weight: 300;                
+                        div{
+                            font-size: 16px;
+                            font-weight: 400;                  
+                            p{                    
+                            font-size: 20px;                        
+                             }
+                            div {
+                             font-style: italic;
+                             font-weight: 300;                        
+                                }                                  
+                          }
+                             
+                   
+                     }
+                 }
+             }
+         }
        
         .space_text {
         margin: 20px;
@@ -28,10 +43,7 @@
         .space_text3 {
         margin-right: 20px;
         margin-left: 20px;
-        font-size: 20px; 
-        color: rgba(6, 2, 29, 1); 
-        font-family: 'Ubuntu', sans-serif; 
-        font-weight:500;
+        
                
         }
         .space_text4 {
@@ -48,43 +60,55 @@
 }
 
 @media only screen and (min-width:600px) {
-    #padre_about_me {
-        
-        margin-top: 120px;
-        margin-bottom: 120px;
-        display: flex;
-        justify-content: center;
-        
+
+    
+    main {
+        div{
+            div{              
+                div{
+                    font-size: 24px;
+                    color: rgba(8, 38, 66, 1);
+                    font-family: 'Ubuntu', sans-serif;
+                    font-weight: 300;                
+                    div{
+                        font-size: 16px;
+                        font-weight: 400;                  
+                        p{                    
+                        font-size: 20px;                        
+                        }
+                        div {
+                         font-style: italic;
+                         font-weight: 300;                        
+                            }                                  
+                        }
+                         
+               
+                    }
+                }
+            }
         }
-        .padre_about_me2 {
-        justify-content: center;
-        width: 600px;    
-        flex-direction: column;
-        }
-       
-        .space_text {
+    
+    .space_text {
         margin: 20px;
         }
-        .space_text2 {
+
+    .space_text2 {
         margin-top: 20px;
         margin-bottom: 20px;
         
         }
     
-        .space_text3 {
+    .space_text3 {
         margin-right: 20px;
-        margin-left: 20px;
-        font-size: 20px; 
-        color: rgba(6, 2, 29, 1); 
-        font-family: 'Ubuntu', sans-serif; 
-        font-weight:500;        
+        margin-left: 20px;              
         }
-        .space_text4 {
+
+    .space_text4 {
         margin-top: 100px;
         margin-bottom: 20px;
         }
     
-        .img_gallery_aboutme {
+    .img_gallery_aboutme {
             width: 200px;
         }
     }
