--- a/scss/_estilos_texto.scss
+++ b/scss/_estilos_texto.scss
@@ -1,36 +1,40 @@
 
 
 
+/* variables */
 
+$color_brand_01 : rgba(237, 240, 245, 1);
+$color_brand_02 : rgba(8, 38, 66, 1);
+$color_brand_03 : rgba(6, 2, 29, 1);
+$type_brand : 'Ubuntu', sans-serif; 
 
 
 @media only screen and (max-width: 600px) {
 
 .text_title {
     font-size: 40px; 
-    color: rgba(8, 38, 66, 1); 
     font-family: 'Ubuntu', sans-serif; 
     font-weight: 300; 
     kerning: 30px;
 }
 .text_subtitle {
     font-size: 24px; 
-    color: rgba(6, 2, 29, 1); 
-    font-family: 'Ubuntu', sans-serif; 
+    color: $color_brand_03;
+    font-family: $type_brand;
     font-weight: 700; 
     text-align: center;
 }
 .text_focused {
     font-size: 24px; 
-    color: rgba(6, 2, 29, 1); 
-    font-family: 'Ubuntu', sans-serif; 
+    color: $color_brand_03;
+    font-family: $type_brand;
     font-weight:500;
     text-decoration: none;
 }
 .text_regular {
     font-size: 16px; 
-    color: rgba(6, 2, 29, 1);  
-    font-family: 'Ubuntu', sans-serif; 
+    color: $color_brand_03;  
+    font-family: $type_brand; 
     font-weight:400; 
     text-align: center;
     display: inline;
@@ -40,8 +44,8 @@
     display: flex;
     align-items: center;
     font-size: 40px; 
-    color: rgba(8, 38, 66, 1); 
-    font-family: 'Ubuntu', sans-serif; 
+    color:$color_brand_02; 
+    font-family: $type_brand; 
     font-weight: 300; 
     padding-left: 0%;
     padding-top: 0%;
@@ -52,29 +56,29 @@
 @media only screen and (min-width:600px) {
     .text_title {
         font-size: 40px; 
-        color: rgba(8, 38, 66, 1); 
-        font-family: 'Ubuntu', sans-serif; 
+        color: $color_brand_02; 
+        font-family:  $type_brand;  
         font-weight: 300; 
         kerning: 30px;
     }
     .text_subtitle {
         font-size: 32px; 
-        color: rgba(6, 2, 29, 1); 
-        font-family: 'Ubuntu', sans-serif; 
+        color: $color_brand_03;
+        font-family:  $type_brand; 
         font-weight: 700; 
         text-align: center;
     }
     .text_focused {
         font-size: 24px; 
-        color: rgba(6, 2, 29, 1); 
-        font-family: 'Ubuntu', sans-serif; 
+        color: $color_brand_03; 
+        font-family:  $type_brand; 
         font-weight:500;
         text-decoration: none;
     }
     .text_regular {
         font-size: 16px; 
-        color: rgba(6, 2, 29, 1);  
-        font-family: 'Ubuntu', sans-serif; 
+        color: $color_brand_03;  
+        font-family:  $type_brand; 
         font-weight:400; 
         display: inline;
         line-height: 25px;
