--- a/scss/_estilos_texto.scss
+++ b/scss/_estilos_texto.scss
@@ -13,7 +13,7 @@ $type_brand : 'Ubuntu', sans-serif;
 
 .text_title {
     font-size: 40px; 
-    font-family: 'Ubuntu', sans-serif; 
+    font-family: $type_brand;
     font-weight: 300; 
     kerning: 30px;
 }
