--- a/style/style_responsive.css
+++ b/style/style_responsive.css
@@ -166,11 +166,76 @@
   .img_gallery {
     height: 300px; } }
 
+/* variables */
+@media only screen and (max-width: 600px) {
+  .text_title {
+    font-size: 40px;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 300;
+    kerning: 30px; }
+  .text_subtitle {
+    font-size: 24px;
+    color: #06021d;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    text-align: center; }
+  .text_focused {
+    font-size: 24px;
+    color: #06021d;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 500;
+    text-decoration: none; }
+  .text_regular {
+    font-size: 16px;
+    color: #06021d;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 400;
+    text-align: center;
+    display: inline; }
+  #name1 {
+    grid-area: name1;
+    display: flex;
+    align-items: center;
+    font-size: 40px;
+    color: #082642;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 300;
+    padding-left: 0%;
+    padding-top: 0%;
+    justify-content: center; } }
+
+@media only screen and (min-width: 600px) {
+  .text_title {
+    font-size: 40px;
+    color: #082642;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 300;
+    kerning: 30px; }
+  .text_subtitle {
+    font-size: 32px;
+    color: #06021d;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    text-align: center; }
+  .text_focused {
+    font-size: 24px;
+    color: #06021d;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 500;
+    text-decoration: none; }
+  .text_regular {
+    font-size: 16px;
+    color: #06021d;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 400;
+    display: inline;
+    line-height: 25px; } }
+
 @media only screen and (max-width: 600px) {
   main div div div {
     font-size: 24px;
     color: #082642;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-weight: 300; }
     main div div div div {
       font-size: 16px;
@@ -226,7 +291,7 @@
 @media only screen and (max-width: 600px) {
   .text_title {
     font-size: 40px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-weight: 300;
     kerning: 30px; }
   .text_subtitle {
