--- a/style/style_responsive.css
+++ b/style/style_responsive.css
@@ -70,127 +70,46 @@
     height: 200px; } }
 
 @media only screen and (min-width: 600px) {
-  .main_class {
-    display: grid;
-    grid-template-columns: 900px;
-    grid-template-rows: 400px 400px 400px;
-    grid-template-areas: "top" "mid"  "bot";
-    height: 1200px;
-    justify-content: center; }
-  .main_class_gallery2 {
-    display: grid;
-    grid-template-columns: 900px;
-    grid-template-rows: 400px 400px 400px 400px;
-    grid-template-areas: "top" "mid" "bot"  "bot2";
-    height: 1600px;
-    justify-content: center; }
-  .main_class_conteiner {
-    display: flex;
-    justify-content: center; }
-  .main_1st_conteiner {
-    grid-area: top;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
-    grid-template-areas: "1stleft 1stright"; }
-  .main_1st_conteiner_left {
-    grid-area: 1stleft;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-    display: flex;
-    -ms-flex-align: center; }
-  .main_1st_conteiner_right {
-    grid-area: 1stright;
-    display: flex;
-    align-items: center; }
-  .main_2nd_conteiner {
-    grid-area: mid;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
-    grid-template-areas: "2ndleft 2ndright"; }
-  .main_2nd_conteiner_left {
-    grid-area: 2ndleft;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .main_2nd_conteiner_right {
-    grid-area: 2ndright;
-    justify-content: left;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-    display: flex;
-    -ms-flex-align: center; }
-  .main_3rd_conteiner {
-    grid-area: bot;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 1fr;
-    grid-template-areas: "3rdleft 3rdright"; }
-  .main_3rd_conteiner_left {
-    grid-area: 3rdleft;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-    display: flex;
-    -ms-flex-align: center; }
-  .main_3rd_conteiner_right {
-    grid-area: 3rdright;
-    display: flex;
-    align-items: center; }
-  .main_4rd_conteiner {
-    grid-area: bot2;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
-    grid-template-areas: "2ndleft 2ndright"; }
-  .main_4rd_conteiner_left {
-    grid-area: 2ndleft;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .main_4rd_conteiner_right {
-    grid-area: 2ndright;
-    justify-content: left;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-    display: flex;
-    -ms-flex-align: center; }
   .div_card {
     margin: 5%; }
   .img_gallery {
     height: 300px; } }
 
 /* variables */
+.footer_special_text_color {
+  font-family: "Ubuntu", sans-serif;
+  color: #edf0f5;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 8px; }
+
+#name2 {
+  grid-area: name1;
+  display: flex;
+  align-items: center;
+  font-size: 40px;
+  color: #082642;
+  font-weight: 300;
+  padding-left: 0%;
+  padding-top: 0%;
+  justify-content: center;
+  text-decoration: none; }
+
 @media only screen and (max-width: 600px) {
-  .text_title {
-    font-size: 40px;
+  .text_style1, .text_subtitle, .text_focused, .text_regular, #name1 {
     font-family: "Ubuntu", sans-serif;
-    font-weight: 300;
-    kerning: 30px; }
-  .text_subtitle {
-    font-size: 24px;
     color: #06021d;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
+    font-size: 24px;
+    text-decoration: none;
     text-align: center; }
+  .text_subtitle {
+    font-weight: 700; }
   .text_focused {
-    font-size: 24px;
-    color: #06021d;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    text-decoration: none; }
+    font-weight: 500; }
   .text_regular {
     font-size: 16px;
-    color: #06021d;
-    font-family: "Ubuntu", sans-serif;
     font-weight: 400;
-    text-align: center;
     display: inline; }
   #name1 {
     grid-area: name1;
@@ -198,36 +117,34 @@
     align-items: center;
     font-size: 40px;
     color: #082642;
-    font-family: "Ubuntu", sans-serif;
     font-weight: 300;
     padding-left: 0%;
     padding-top: 0%;
-    justify-content: center; } }
+    justify-content: center;
+    text-decoration: none; } }
 
 @media only screen and (min-width: 600px) {
-  .text_title {
-    font-size: 40px;
-    color: #082642;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 300;
-    kerning: 30px; }
   .text_subtitle {
     font-size: 32px;
+    font-weight: 700;
     color: #06021d;
     font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
+    text-decoration: none;
     text-align: center; }
   .text_focused {
     font-size: 24px;
+    font-weight: 500;
     color: #06021d;
     font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    text-decoration: none; }
+    text-decoration: none;
+    text-align: center; }
   .text_regular {
     font-size: 16px;
+    font-weight: 400;
     color: #06021d;
     font-family: "Ubuntu", sans-serif;
-    font-weight: 400;
+    text-decoration: none;
+    text-align: center;
     display: inline;
     line-height: 25px; } }
 
@@ -288,30 +205,40 @@
     width: 200px; } }
 
 /* variables */
+.footer_special_text_color {
+  font-family: "Ubuntu", sans-serif;
+  color: #edf0f5;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 8px; }
+
+#name2 {
+  grid-area: name1;
+  display: flex;
+  align-items: center;
+  font-size: 40px;
+  color: #082642;
+  font-weight: 300;
+  padding-left: 0%;
+  padding-top: 0%;
+  justify-content: center;
+  text-decoration: none; }
+
 @media only screen and (max-width: 600px) {
-  .text_title {
-    font-size: 40px;
+  .text_style1, .text_subtitle, .text_focused, .text_regular, #name1 {
     font-family: "Ubuntu", sans-serif;
-    font-weight: 300;
-    kerning: 30px; }
-  .text_subtitle {
-    font-size: 24px;
     color: #06021d;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
+    font-size: 24px;
+    text-decoration: none;
     text-align: center; }
+  .text_subtitle {
+    font-weight: 700; }
   .text_focused {
-    font-size: 24px;
-    color: #06021d;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    text-decoration: none; }
+    font-weight: 500; }
   .text_regular {
     font-size: 16px;
-    color: #06021d;
-    font-family: "Ubuntu", sans-serif;
     font-weight: 400;
-    text-align: center;
     display: inline; }
   #name1 {
     grid-area: name1;
@@ -319,36 +246,34 @@
     align-items: center;
     font-size: 40px;
     color: #082642;
-    font-family: "Ubuntu", sans-serif;
     font-weight: 300;
     padding-left: 0%;
     padding-top: 0%;
-    justify-content: center; } }
+    justify-content: center;
+    text-decoration: none; } }
 
 @media only screen and (min-width: 600px) {
-  .text_title {
-    font-size: 40px;
-    color: #082642;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 300;
-    kerning: 30px; }
   .text_subtitle {
     font-size: 32px;
+    font-weight: 700;
     color: #06021d;
     font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
+    text-decoration: none;
     text-align: center; }
   .text_focused {
     font-size: 24px;
+    font-weight: 500;
     color: #06021d;
     font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    text-decoration: none; }
+    text-decoration: none;
+    text-align: center; }
   .text_regular {
     font-size: 16px;
+    font-weight: 400;
     color: #06021d;
     font-family: "Ubuntu", sans-serif;
-    font-weight: 400;
+    text-decoration: none;
+    text-align: center;
     display: inline;
     line-height: 25px; } }
 
@@ -430,13 +355,7 @@
     grid-area: button2;
     display: flex;
     align-items: center;
-    justify-content: center; }
-  .footer_special_text_color {
-    font-size: 16px;
-    color: #edf0f5;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 400;
-    text-decoration: none; } }
+    justify-content: center; } }
 
 @media only screen and (min-width: 600px) {
   footer {
@@ -461,14 +380,7 @@
     align-items: center;
     justify-content: center;
     height: 33%;
-    width: 75%; }
-  .footer_special_text_color {
-    font-size: 16px;
-    color: #edf0f5;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 400;
-    text-decoration: none;
-    padding: 8px; } }
+    width: 75%; } }
 
 /* NAV BAR */
 @media only screen and (min-width: 600px) {
@@ -495,7 +407,7 @@
     align-items: center;
     font-size: 50px;
     color: #082642;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-weight: 300;
     padding-left: 0%;
     padding-top: 0%; } }
@@ -612,7 +524,7 @@ img:hover {
 @media only screen and (max-width: 600px) {
   /* Home mobile */
   .div_home_main {
-    padding-top: px;
+    padding-top: 0px;
     background-image: url(../img/index/Bkgn.jpg);
     height: 600px;
     background-repeat: no-repeat;
