--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -166,7 +166,7 @@ img:hover {
     /* Home mobile */
 
     .div_home_main {
-        padding-top: px; 
+        padding-top: 0px; 
         background-image: url(../img/index/Bkgn.jpg); 
         height: 600px; 
         background-repeat: no-repeat; 
